mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_missing_return_void.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
error: Function must end with an explicit 'return' statement on all code paths
--> test_scripts/error_cases/semantic_missing_return_void.mux:2:1
   |
 2 | func foo() returns void {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
 3 |     print("hi")
   | ^^^^^^^^^
   |
= help: Add a 'return' statement at the end of every code path
